--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "nodemon": "node ./bin/www"
   },
   "dependencies": {
+    "async": "^2.6.1",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.18.3",
     "cloudinary": "^1.13.2",
@@ -14,14 +15,15 @@
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "~1.3.5",
     "csurf": "^1.8.3",
-    "debug": "~2.2.0",
+    "debug": "^4.1.1",
     "express": "^4.16.4",
     "express-handlebars": "^3.0.0",
-    "express-session": "^1.13.0",
-    "express-validator": "^2.20.5",
-    "hbs": "~3.1.0",
-    "mongoose": "^4.4.16",
+    "express-session": "^1.15.6",
+    "express-validator": "^5.3.0",
+    "hbs": "^4.0.1",
+    "mongoose": "^4.13.17",
     "morgan": "^1.9.1",
+    "nodemailer": "^4.7.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0",
