--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "connect-mongo": "^1.2.0",
     "connect-multiparty": "^2.2.0",
     "cookie-parser": "~1.3.5",
+    "crypto": "^1.0.1",
     "csurf": "^1.8.3",
     "debug": "^4.1.1",
     "express": "^4.16.4",
@@ -21,9 +22,11 @@
     "express-session": "^1.15.6",
     "express-validator": "^5.3.0",
     "hbs": "^4.0.1",
+    "mailgun-js": "^0.22.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.9.1",
     "nodemailer": "^4.7.0",
+    "nodemailer-mailgun-transport": "^1.4.0",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0",
