--- a/package.json
+++ b/package.json
@@ -34,7 +34,8 @@
     "xoauth2": "^1.2.0"
   },
   "engines": {
-    "node": "10.x"
+    "node": "10.x",
+    "npm": ""
   },
   "repository": {
     "type": "git",
