--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "the-wgb",
   "version": "0.0.1",
   "scripts": {
-    "start": "node ./bin/www",
-    "nodemon": "node ./bin/www"
+    //"start": "node ./bin/www",
+    "nodemon": "node ./bin/www",
+    "start": "node ./www",
   },
   "dependencies": {
     "async": "^2.6.1",
