--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "the-wgb",
-  "version": "0.0.1",
+  "version": "0.9.1",
   "scripts": {
-    "start": "node www",
+    "start": "node ./bin/www",
     "nodemon": "node ./bin/www"
   },
   "dependencies": {
