--- a/package.json
+++ b/package.json
@@ -25,8 +25,10 @@
     "mailgun-js": "^0.22.0",
     "mongoose": "^4.13.17",
     "morgan": "^1.9.1",
+    "multer": "^1.4.1",
     "nodemailer": "^4.7.0",
     "nodemailer-mailgun-transport": "^1.4.0",
+    "nodemon": "^1.18.9",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "serve-favicon": "^2.5.0",
