--- a/package.json
+++ b/package.json
@@ -2,8 +2,7 @@
   "name": "the-wgb",
   "version": "0.9.1",
   "scripts": {
-    "start": "node ./bin/www",
-    "nodemon": "node ./bin/www"
+    "start": "node ./bin/www"
   },
   "dependencies": {
     "async": "^2.6.1",
